--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/BootsFaces-OSP-0.8.5-dist-default.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
